gen/graafvis/GraafvisParser.java
// Generated from C:/Users/Sven/Documents/GitHub/GraphterEffects/src/main/java/graafvis\Graafvis.g4 by ANTLR 4.6
package graafvis;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GraafvisParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ARROW=1, COLON=2, EOL=3, PAR_OPEN=4, PAR_CLOSE=5, BRACE_OPEN=6, BRACE_CLOSE=7, 
		EQ=8, NQ=9, GT=10, LT=11, GE=12, LE=13, COMMA=14, OR=15, AND=16, NOT=17, 
		PLUS=18, MINUS=19, MULT=20, DIV=21, POW=22, MOD=23, UNDERSCORE=24, TRUE=25, 
		FALSE=26, IMPORT_TOKEN=27, NODE_LABEL_TOKEN=28, EDGE_LABEL_TOKEN=29, RENAME_TOKEN=30, 
		STRING=31, NUMBER=32, ID=33, HID=34, WS=35, BLOCKCOMMENT=36, LINECOMMENT=37;
	public static final int
		RULE_program = 0, RULE_import_vis = 1, RULE_node_label_gen = 2, RULE_edge_label_gen = 3, 
		RULE_label = 4, RULE_clause = 5, RULE_antecedent = 6, RULE_propositional_formula = 7, 
		RULE_consequence = 8, RULE_literal = 9, RULE_atom = 10, RULE_multi_atom = 11, 
		RULE_predicate = 12, RULE_term = 13, RULE_ground_term = 14, RULE_variable = 15, 
		RULE_num_expr = 16, RULE_and_op = 17, RULE_eq_op = 18, RULE_pow_op = 19, 
		RULE_mult_op = 20, RULE_plus_op = 21;
	public static final String[] ruleNames = {
		"program", "import_vis", "node_label_gen", "edge_label_gen", "label", 
		"clause", "antecedent", "propositional_formula", "consequence", "literal", 
		"atom", "multi_atom", "predicate", "term", "ground_term", "variable", 
		"num_expr", "and_op", "eq_op", "pow_op", "mult_op", "plus_op"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'->'", "':'", "'.'", "'('", "')'", "'{'", "'}'", "'=='", "'!='", 
		"'>'", "'<'", "'>='", "'<='", "','", "'or'", "'and'", "'not'", "'+'", 
		"'-'", "'*'", "'/'", "'^'", "'%'", "'_'", "'true'", "'false'", "'consult'", 
		"'node labels'", "'edge labels'", "'as'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ARROW", "COLON", "EOL", "PAR_OPEN", "PAR_CLOSE", "BRACE_OPEN", 
		"BRACE_CLOSE", "EQ", "NQ", "GT", "LT", "GE", "LE", "COMMA", "OR", "AND", 
		"NOT", "PLUS", "MINUS", "MULT", "DIV", "POW", "MOD", "UNDERSCORE", "TRUE", 
		"FALSE", "IMPORT_TOKEN", "NODE_LABEL_TOKEN", "EDGE_LABEL_TOKEN", "RENAME_TOKEN", 
		"STRING", "NUMBER", "ID", "HID", "WS", "BLOCKCOMMENT", "LINECOMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Graafvis.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraafvisParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GraafvisParser.EOF, 0); }
		public List<Import_visContext> import_vis() {
			return getRuleContexts(Import_visContext.class);
		}
		public Import_visContext import_vis(int i) {
			return getRuleContext(Import_visContext.class,i);
		}
		public Node_label_genContext node_label_gen() {
			return getRuleContext(Node_label_genContext.class,0);
		}
		public Edge_label_genContext edge_label_gen() {
			return getRuleContext(Edge_label_genContext.class,0);
		}
		public List<ClauseContext> clause() {
			return getRuleContexts(ClauseContext.class);
		}
		public ClauseContext clause(int i) {
			return getRuleContext(ClauseContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT_TOKEN) {
				{
				{
				setState(44);
				import_vis();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NODE_LABEL_TOKEN) {
				{
				setState(50);
				node_label_gen();
				}
			}

			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EDGE_LABEL_TOKEN) {
				{
				setState(53);
				edge_label_gen();
				}
			}

			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PAR_OPEN) | (1L << NOT) | (1L << NUMBER) | (1L << ID) | (1L << HID))) != 0)) {
				{
				{
				setState(56);
				clause();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_visContext extends ParserRuleContext {
		public TerminalNode IMPORT_TOKEN() { return getToken(GraafvisParser.IMPORT_TOKEN, 0); }
		public TerminalNode STRING() { return getToken(GraafvisParser.STRING, 0); }
		public TerminalNode EOL() { return getToken(GraafvisParser.EOL, 0); }
		public Import_visContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_vis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterImport_vis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitImport_vis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitImport_vis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_visContext import_vis() throws RecognitionException {
		Import_visContext _localctx = new Import_visContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_vis);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(IMPORT_TOKEN);
			setState(65);
			match(STRING);
			setState(66);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Node_label_genContext extends ParserRuleContext {
		public TerminalNode NODE_LABEL_TOKEN() { return getToken(GraafvisParser.NODE_LABEL_TOKEN, 0); }
		public TerminalNode COLON() { return getToken(GraafvisParser.COLON, 0); }
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public TerminalNode EOL() { return getToken(GraafvisParser.EOL, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GraafvisParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GraafvisParser.COMMA, i);
		}
		public Node_label_genContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node_label_gen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterNode_label_gen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitNode_label_gen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitNode_label_gen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Node_label_genContext node_label_gen() throws RecognitionException {
		Node_label_genContext _localctx = new Node_label_genContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_node_label_gen);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(NODE_LABEL_TOKEN);
			setState(69);
			match(COLON);
			setState(70);
			label();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(71);
				match(COMMA);
				setState(72);
				label();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Edge_label_genContext extends ParserRuleContext {
		public TerminalNode EDGE_LABEL_TOKEN() { return getToken(GraafvisParser.EDGE_LABEL_TOKEN, 0); }
		public TerminalNode COLON() { return getToken(GraafvisParser.COLON, 0); }
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public TerminalNode EOL() { return getToken(GraafvisParser.EOL, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GraafvisParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GraafvisParser.COMMA, i);
		}
		public Edge_label_genContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge_label_gen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterEdge_label_gen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitEdge_label_gen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitEdge_label_gen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Edge_label_genContext edge_label_gen() throws RecognitionException {
		Edge_label_genContext _localctx = new Edge_label_genContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_edge_label_gen);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(EDGE_LABEL_TOKEN);
			setState(81);
			match(COLON);
			setState(82);
			label();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(83);
				match(COMMA);
				setState(84);
				label();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(GraafvisParser.STRING, 0); }
		public TerminalNode RENAME_TOKEN() { return getToken(GraafvisParser.RENAME_TOKEN, 0); }
		public TerminalNode ID() { return getToken(GraafvisParser.ID, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(STRING);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RENAME_TOKEN) {
				{
				setState(93);
				match(RENAME_TOKEN);
				setState(94);
				match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseContext extends ParserRuleContext {
		public ConsequenceContext consequence() {
			return getRuleContext(ConsequenceContext.class,0);
		}
		public TerminalNode EOL() { return getToken(GraafvisParser.EOL, 0); }
		public AntecedentContext antecedent() {
			return getRuleContext(AntecedentContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(GraafvisParser.ARROW, 0); }
		public ClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClauseContext clause() throws RecognitionException {
		ClauseContext _localctx = new ClauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(97);
				antecedent();
				setState(98);
				match(ARROW);
				}
				break;
			}
			setState(102);
			consequence();
			setState(103);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AntecedentContext extends ParserRuleContext {
		public Propositional_formulaContext propositional_formula() {
			return getRuleContext(Propositional_formulaContext.class,0);
		}
		public AntecedentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_antecedent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterAntecedent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitAntecedent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitAntecedent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AntecedentContext antecedent() throws RecognitionException {
		AntecedentContext _localctx = new AntecedentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_antecedent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			propositional_formula(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Propositional_formulaContext extends ParserRuleContext {
		public Propositional_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propositional_formula; }
	 
		public Propositional_formulaContext() { }
		public void copyFrom(Propositional_formulaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PfNotContext extends Propositional_formulaContext {
		public TerminalNode NOT() { return getToken(GraafvisParser.NOT, 0); }
		public Propositional_formulaContext propositional_formula() {
			return getRuleContext(Propositional_formulaContext.class,0);
		}
		public PfNotContext(Propositional_formulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterPfNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitPfNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitPfNot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PfLitContext extends Propositional_formulaContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public PfLitContext(Propositional_formulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterPfLit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitPfLit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitPfLit(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PfAndContext extends Propositional_formulaContext {
		public List<Propositional_formulaContext> propositional_formula() {
			return getRuleContexts(Propositional_formulaContext.class);
		}
		public Propositional_formulaContext propositional_formula(int i) {
			return getRuleContext(Propositional_formulaContext.class,i);
		}
		public And_opContext and_op() {
			return getRuleContext(And_opContext.class,0);
		}
		public PfAndContext(Propositional_formulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterPfAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitPfAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitPfAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PfOrContext extends Propositional_formulaContext {
		public List<Propositional_formulaContext> propositional_formula() {
			return getRuleContexts(Propositional_formulaContext.class);
		}
		public Propositional_formulaContext propositional_formula(int i) {
			return getRuleContext(Propositional_formulaContext.class,i);
		}
		public TerminalNode OR() { return getToken(GraafvisParser.OR, 0); }
		public PfOrContext(Propositional_formulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterPfOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitPfOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitPfOr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PfNestContext extends Propositional_formulaContext {
		public TerminalNode PAR_OPEN() { return getToken(GraafvisParser.PAR_OPEN, 0); }
		public Propositional_formulaContext propositional_formula() {
			return getRuleContext(Propositional_formulaContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(GraafvisParser.PAR_CLOSE, 0); }
		public PfNestContext(Propositional_formulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterPfNest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitPfNest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitPfNest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Propositional_formulaContext propositional_formula() throws RecognitionException {
		return propositional_formula(0);
	}

	private Propositional_formulaContext propositional_formula(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Propositional_formulaContext _localctx = new Propositional_formulaContext(_ctx, _parentState);
		Propositional_formulaContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_propositional_formula, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				_localctx = new PfNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(108);
				match(NOT);
				setState(109);
				propositional_formula(5);
				}
				break;
			case 2:
				{
				_localctx = new PfNestContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(110);
				match(PAR_OPEN);
				setState(111);
				propositional_formula(0);
				setState(112);
				match(PAR_CLOSE);
				}
				break;
			case 3:
				{
				_localctx = new PfLitContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(114);
				literal();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(126);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(124);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new PfAndContext(new Propositional_formulaContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_propositional_formula);
						setState(117);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(118);
						and_op();
						setState(119);
						propositional_formula(5);
						}
						break;
					case 2:
						{
						_localctx = new PfOrContext(new Propositional_formulaContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_propositional_formula);
						setState(121);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(122);
						match(OR);
						setState(123);
						propositional_formula(4);
						}
						break;
					}
					} 
				}
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ConsequenceContext extends ParserRuleContext {
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GraafvisParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GraafvisParser.COMMA, i);
		}
		public ConsequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_consequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterConsequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitConsequence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitConsequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConsequenceContext consequence() throws RecognitionException {
		ConsequenceContext _localctx = new ConsequenceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_consequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			literal();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(130);
				match(COMMA);
				setState(131);
				literal();
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
